--- a/Music.html
+++ b/Music.html
@@ -206,7 +206,7 @@
 
         <br>
 
-        <div class="Kaanthaa-Masala-Coffee title test1">
+        <div class="Kaanthaa-Masala-Coffee title">
 
             <span class="material-symbols-outlined KMCpl play">
                 play_circle
@@ -220,7 +220,51 @@
             <source src="music/Kaanthaa - Masala Coffee.opus" type="audio/mpeg">
         </audio>
 
+        <br>
 
+        <div class="Money-Trees-Kendrick-Lamar title">
+            <span class="material-symbols-outlined MTKLpl play">
+                play_circle
+            </span>
+            <span class="material-symbols-outlined MTKLpa pause">
+                pause_circle
+            </span>
+            <p class="MTKL sname">Money Trees - Kendrick Lamar</p>
+        </div>
+        <audio id=t14 class="audio-element" data-file-name="Money Trees - Kendrick Lamar">
+            <source src="music/Money Trees - Kendrick Lamar.opus" type="audio/mpeg">
+        </audio>
+
+        <br>
+
+        <div class="Calm-Down-Rema,Selena-Gomez title">
+            <span class="material-symbols-outlined CDRGpl play">
+                play_circle
+            </span>
+            <span class="material-symbols-outlined CDRGpa pause">
+                pause_circle
+            </span>
+            <p class="CDRG sname">Calm Down - Rema,Selena Gomez</p>
+        </div>
+        <audio id=t15 class="audio-element" data-file-name="Calm Down - Rema,Selena Gomez">
+            <source src="music/Calm Down - Rema,Selena Gomez.opus" type="audio/mpeg">
+        </audio>
+
+        <br>
+
+        <div class="Writing's-On-The-Wall-Sam-Smith title">
+            <span class="material-symbols-outlined WOTWSSpl play">
+                play_circle
+            </span>
+            <span class="material-symbols-outlined WOTWSSpa pause">
+                pause_circle
+            </span>
+            <p class="WOTWSS sname">Writing's On The Wall - Sam Smith</p>
+        </div>
+        <audio id=t16 class="audio-element" data-file-name="Writing's On The Wall - Sam Smith">
+            <source src="music/Writing's On The Wall - Sam Smith.opus" type="audio/mpeg">
+        </audio>
+        
     </div>
     <br><br><br><br><br>
 
