--- a/Music.html
+++ b/Music.html
@@ -5,50 +5,59 @@
     <link rel="stylesheet" href="music.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=New+Rocker&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nova+Mono&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
 
     <div id="audio files">
-        <audio id="t1" class="audio-element" data-file-name="Shower - Becky G">
-            <source src="music/Becky G - Shower (Lyrics) [GS6hRZYFhx0].mp3" type="audio/mpeg">
+        <audio id="t1" class="audio-element" data-file-artist="Becky G" data-file-name="Shower">
+            <source src="shower.mp3" type="audio/mpeg">
         </audio>
-        <audio id="t2" class="audio-element" data-file-name=" Confessions Part 2 - Usher">
-            <source src="music/Confessions Part 2.mp3" type="audio/mpeg">
+        <audio id="t2" class="audio-element" data-file-artist="Usher" data-file-name="Confessions Part 2">
+            <source src="music/Confessions Part 2.opus" type="audio/mpeg">
         </audio>
-        <audio id="t3" class="audio-element" data-file-name="Season of Love - Rent">
-            <source src="music/Seasons of Love.mp3" type="audio/mpeg">
+        <audio id="t3" class="audio-element" data-file-artist="Rent" data-file-name="Season of Love">
+            <source src="music/Seasons of Love.opus" type="audio/mpeg">
         </audio>
-        <audio id="t4" class="audio-element" data-file-name="Set Fire to the rain - Adele">
-            <source src="music/Set Fire To The Rain Live at The Royal Albert Hall.mp3" type="audio/mpeg">
+        <audio id="t4" class="audio-element" data-file-artist="Adele" data-file-name="Set Fire to the rain">
+            <source src="music/Set Fire To The Rain Live at The Royal Albert Hall.opus" type="audio/mpeg">
         </audio>
-        <audio id="t5" class="audio-element" data-file-name="Roxxane - Arizona Zervas">
-            <source src="music/Arizona Zervas - ROXANNE (Lyrics) [mfYUtROIzDk].mp3" type="audio/mpeg">
+        <audio id="t5" class="audio-element" data-file-artist="Arizona Zervas" data-file-name="Roxxane">
+            <source src="music/Arizona Zervas - ROXANNE.opus" type="audio/mpeg">
         </audio>
-        <audio id="t6" class="audio-element" data-file-name="Shallow - Lady Gaga">
-            <source src="music/Shallow (Radio Edit).mp3" type="audio/mpeg">
+        <audio id="t6" class="audio-element" data-file-artist="Lady Gaga" data-file-name="Shallow">
+            <source src="music/Shallow (Radio Edit).opus" type="audio/mpeg">
         </audio>
-        <audio id=t7 class="audio-element" data-file-name="Default Vibe - Major Lazer">
-            <source src="music/Fortnite - Lobby Track - Default Vibe Original.mp3" type="audio/mpeg">
+        <audio id=t7 class="audio-element" data-file-artist="Major Lazer" data-file-name="Default Vibe">
+            <source src="music/Fortnite - Lobby Track - Default Vibe Original.opus" type="audio/mpeg">
         </audio>
-        <audio id=t8 class="audio-element" data-file-name="One Last Time - Ariana Grande">
-            <source src="music/Ariana Grande - One Last Time.mp3" type="audio/mpeg">
+        <audio id=t8 class="audio-element" data-file-artist="Ariana Grande" data-file-name="One Last Time">
+            <source src="music/Ariana Grande - One Last Time.opus" type="audio/mpeg">
         </audio>
-        <audio id=t9 class="audio-element" data-file-name="Wolves - Selena Gomez, Marshmello">
-            <source src="music/Selena Gomez, Marshmello - Wolves.mp3" type="audio/mpeg">
+        <audio id=t9 class="audio-element" data-file-artist="Selena Gomez, Marshmello" data-file-name="Wolves">
+            <source src="music/Selena Gomez, Marshmello - Wolves.opus" type="audio/mpeg">
         </audio>
     </div>
 
     <div id="musiccontrols">
         <div id="titletrack"></div>
+        <div id="trackartist"></div>
         <div id="counter">
             <p id="minuter"></p>
             <p id="seconder"></p>
         </div>
+        <span class="material-symbols-outlined replaybutt">
+            repeat
+        </span>
+        <span class="material-symbols-outlined replaystopbutt">
+            repeat_on
+        </span>
     </div>
 
     <div id="playbuts">
@@ -60,10 +69,8 @@
             <span class="material-symbols-outlined showerpa pause">
                 pause_circle
             </span>
-            <p class="sbg sname">Shower - Becky G</p>
+            <p class="sbg sname">Shower<br><span class="artist">Becky G</span></p>
         </div>
-
-        <br>
 
         <div class="confessions-part-2-usher title">
             <span class="material-symbols-outlined cptupl play">
@@ -72,10 +79,10 @@
             <span class="material-symbols-outlined cptupa pause">
                 pause_circle
             </span>
-            <p class="cptu sname">Confessions part 2 - Usher</p>
+            <p class="cptu sname">Confessions part 2<br><span class="artist">Usher</span></p>
         </div>
 
-        <br>
+
 
         <div class="seasons-of-love-rent title">
             <span class="material-symbols-outlined solrpl play">
@@ -84,10 +91,10 @@
             <span class="material-symbols-outlined solrpa pause">
                 pause_circle
             </span>
-            <p class="solr sname">Seasons of Love - Rent</p>
+            <p class="solr sname">Seasons of Love<br><span class="artist">Rent</span></p>
         </div>
 
-        <br>
+
 
         <div class="set-fire-to-the-rain-adele-royal-albert title">
             <span class="material-symbols-outlined sfttrarlpl play">
@@ -96,10 +103,10 @@
             <span class="material-symbols-outlined sfttrarlpa pause">
                 pause_circle
             </span>
-            <p class="sfttrarl sname">Set Fire to the rain - Adele</p>
+            <p class="sfttrarl sname">Set Fire to the rain(Royal Albert hall)<br><span class="artist">Adele</span></p>
         </div>
 
-        <br>
+
 
         <div class="roxxanne-arizona-zervas title">
             <span class="material-symbols-outlined razpl play">
@@ -108,10 +115,9 @@
             <span class="material-symbols-outlined razpa pause">
                 pause_circle
             </span>
-            <p class="raz sname">Roxxane - Arizona Zervas</p>
+            <p class="raz sname">Roxxane<br><span class="artist">Arizona Zervas</span></p>
         </div>
 
-        <br>
 
         <div class="shallow-lady-gaga title">
             <span class="material-symbols-outlined slgpl play">
@@ -120,10 +126,9 @@
             <span class="material-symbols-outlined slgpa pause">
                 pause_circle
             </span>
-            <p class="slg sname">Shallow - Lady Gaga</p>
+            <p class="slg sname">Shallow<br><span class="artist">Lady Gaga</span></p>
         </div>
 
-        <br>
 
         <div class="fortnite-lobby-default-vibe title">
             <span class="material-symbols-outlined fltdvpl play">
@@ -132,10 +137,9 @@
             <span class="material-symbols-outlined fltdvpa pause">
                 pause_circle
             </span>
-            <p class="fltdv sname">Default Vibe - Major Lazer</p>
+            <p class="fltdv sname">Default Vibe<br><span class="artist">Major Lazer</span></p>
         </div>
 
-        <br>
 
         <div class="one-last-time-ariana-grande title">
             <span class="material-symbols-outlined oltagpl play">
@@ -144,10 +148,10 @@
             <span class="material-symbols-outlined oltagpa pause">
                 pause_circle
             </span>
-            <p class="oltag sname">One Last Time - Ariana Grande</p>
+            <p class="oltag sname">One Last Time<br><span class="artist">Ariana Grande</span></p>
         </div>
 
-        <br>
+
 
         <div class="wolves-selenagomez-marshmello title">
             <span class="material-symbols-outlined wsgmpl play">
@@ -156,10 +160,9 @@
             <span class="material-symbols-outlined wsgmpa pause">
                 pause_circle
             </span>
-            <p class="wsgm sname">Wolves - Selena Gomez, Marshmello</p>
+            <p class="wsgm sname">Wolves<br><span class="artist">Selena Gomez, Marshmello</span></p>
         </div>
 
-        <br>
 
         <div class="The-Boat-Song-Agam title">
             <span class="material-symbols-outlined TBSApl play">
@@ -168,13 +171,14 @@
             <span class="material-symbols-outlined TBSApa pause">
                 pause_circle
             </span>
-            <p class="TBSA sname">The Boat Song - Agam</p>
+            <p class="TBSA sname">The Boat Song<br><span class="artist">Agam</span></p>
         </div>
-        <audio id=t10 class="audio-element" data-file-name="The Boat Song - Agam" name="TBSApa" value="TBSApa">
+        <audio id=t10 class="audio-element" data-file-artist="Agam" data-file-name="The Boat Song" name="TBSApa"
+            value="TBSApa">
             <source src="music/The Boat Song - Agam.opus" type="audio/mpeg">
         </audio>
 
-        <br>
+
 
         <div class="Big-Boys-SNL title">
             <span class="material-symbols-outlined BBSpl play">
@@ -183,13 +187,13 @@
             <span class="material-symbols-outlined BBSpa pause">
                 pause_circle
             </span>
-            <p class="BBS sname">Big Boys - SNL</p>
+            <p class="BBS sname">Big Boys<br><span class="artist">SNL</span></p>
         </div>
-        <audio id=t11 class="audio-element" data-file-name="Big Boys - SNL">
+        <audio id=t11 class="audio-element" data-file-artist="SNL" data-file-name="Big Boys">
             <source src="music/Big Boys - SNL.opus" type="audio/mpeg">
         </audio>
 
-        <br>
+
 
         <div class="Appozhum-Thaikkudam-Bridge title">
             <span class="material-symbols-outlined ATBpl play">
@@ -198,13 +202,13 @@
             <span class="material-symbols-outlined ATBpa pause">
                 pause_circle
             </span>
-            <p class="ATB sname">Appozhum - Thaikkudam Bridge</p>
+            <p class="ATB sname">Appozhum<br><span class="artist">Thaikkudam Bridge</span></p>
         </div>
-        <audio id=t12 class="audio-element" data-file-name="Appozhum - Thaikkudam Bridge">
+        <audio id=t12 class="audio-element" data-file-artist="Thaikkudam Bridge" data-file-name="Appozhum">
             <source src="music/Appozhum - Thaikkudam Bridge.opus" type="audio/mpeg">
         </audio>
 
-        <br>
+
 
         <div class="Kaanthaa-Masala-Coffee title">
 
@@ -214,13 +218,13 @@
             <span class="material-symbols-outlined KMCpa pause">
                 pause_circle
             </span>
-            <p class="KMC sname">Kaanthaa - Masala Coffee</p>
+            <p class="KMC sname">Kaanthaa<br><span class="artist">Masala Coffee</span></p>
         </div>
-        <audio id=t13 class="audio-element" data-file-name="Kaanthaa - Masala Coffee">
+        <audio id=t13 class="audio-element" data-file-artist="Masala Coffee" data-file-name="Kaanthaa">
             <source src="music/Kaanthaa - Masala Coffee.opus" type="audio/mpeg">
         </audio>
 
-        <br>
+
 
         <div class="Money-Trees-Kendrick-Lamar title">
             <span class="material-symbols-outlined MTKLpl play">
@@ -229,13 +233,12 @@
             <span class="material-symbols-outlined MTKLpa pause">
                 pause_circle
             </span>
-            <p class="MTKL sname">Money Trees - Kendrick Lamar</p>
+            <p class="MTKL sname">Money Trees<br><span class="artist">Kendrick Lamar</span></p>
         </div>
-        <audio id=t14 class="audio-element" data-file-name="Money Trees - Kendrick Lamar">
+        <audio id=t14 class="audio-element" data-file-artist="Kendrick Lamar" data-file-name="Money Trees">
             <source src="music/Money Trees - Kendrick Lamar.opus" type="audio/mpeg">
         </audio>
 
-        <br>
 
         <div class="Calm-Down-Rema,Selena-Gomez title">
             <span class="material-symbols-outlined CDRGpl play">
@@ -244,29 +247,61 @@
             <span class="material-symbols-outlined CDRGpa pause">
                 pause_circle
             </span>
-            <p class="CDRG sname">Calm Down - Rema,Selena Gomez</p>
+            <p class="CDRG sname">Calm Down<br><span class="artist">Rema,Selena Gomez</span></p>
         </div>
-        <audio id=t15 class="audio-element" data-file-name="Calm Down - Rema,Selena Gomez">
+        <audio id=t15 class="audio-element" data-file-artist="Rema,Selena Gomez" data-file-name="Calm Down">
             <source src="music/Calm Down - Rema,Selena Gomez.opus" type="audio/mpeg">
         </audio>
 
-        <br>
 
-        <div class="Writing's-On-The-Wall-Sam-Smith title">
+        <div class="Writings-On-The-Wall-Sam-Smith title">
             <span class="material-symbols-outlined WOTWSSpl play">
                 play_circle
             </span>
             <span class="material-symbols-outlined WOTWSSpa pause">
                 pause_circle
             </span>
-            <p class="WOTWSS sname">Writing's On The Wall - Sam Smith</p>
+            <p class="WOTWSS sname">Writing's On The Wall<br><span class="artist">Sam Smith</span></p>
         </div>
-        <audio id=t16 class="audio-element" data-file-name="Writing's On The Wall - Sam Smith">
+        <audio id=t16 class="audio-element" data-file-artist="Sam Smith" data-file-name="Writing's On The Wall">
             <source src="music/Writing's On The Wall - Sam Smith.opus" type="audio/mpeg">
         </audio>
-        
+
+
+
+        <div class="When-We-Were-Young-Adele title">
+            <span class="material-symbols-outlined WWWYApl play">
+                play_circle
+            </span>
+            <span class="material-symbols-outlined WWWYApa pause">
+                pause_circle
+            </span>
+            <p class="WWWYA sname">When We Were Young<br><span class="artist">Adele</span></p>
+        </div>
+        <audio id=t17 class="audio-element" data-file-artist="Adele" data-file-name="When We Were Young">
+            <source src="music/When We Were Young - Adele.opus" type="audio/mpeg">
+        </audio>
+
+
+
+        <div class="Leave-the-Door-Open-Bruno-Mars-Anderson-Paak-Silk-Sonic title">
+            <span class="material-symbols-outlined LtDOBMAPSSpl play">
+                play_circle
+            </span>
+            <span class="material-symbols-outlined LtDOBMAPSSpa pause">
+                pause_circle
+            </span>
+            <p class="LtDOBMAPSS sname">Leave the Door Open<br><span class="artist">Bruno Mars, Anderson Paak, Silk
+                    Sonic</span></p>
+        </div>
+        <audio id=t18 class="audio-element" data-file-artist="Bruno Mars, Anderson Paak, Silk
+            Sonic" data-file-name="Leave the Door Open">
+            <source src="music/Leave the Door Open - Bruno Mars, Anderson Paak, Silk Sonic.opus" type="audio/mpeg">
+        </audio>
+
+
     </div>
-    <br><br><br><br><br>
+
 
 
     <script src="music.js" type="text/javascript"></script>
