--- a/word changer.html
+++ b/word changer.html
@@ -52,11 +52,12 @@
 
         function doits() {
             var v1 = prompt('Song Title');
-            var v3 = prompt('song number');
+            var v3 = localStorage.getItem('noofsongs')
             var v4 = v1.replace(/ /g, "-");
             var v5 = prompt("number of words in the song title")
             var v6;
             var v7;
+            var vk;
 
             const arr = v1.split("");
             var nme = arr[0];
@@ -104,7 +105,37 @@
             document.getElementById("epl").innerHTML = "document.querySelector('." + v1 + "pl').addEventListener('click', () => {<br>p" + v3 + ".play();<br>" + v1 + "pl.style.visibility = 'hidden';<br>" + v1 + "pa.style.visibility = 'visible';});";
             document.getElementById("epa").innerHTML = "document.querySelector('." + v1 + "pa').addEventListener('click', () => {<br>p" + v3 + ".pause();<br>" + v1 + "pl.style.visibility = 'visible';<br>" + v1 + "pa.style.visibility = 'hidden';});";
 
-            console.log('<br>\n\n<div class="' + v4 + ' title">\n<span class="material-symbols-outlined ' + v1 + 'pl play">\nplay_circle\n</span>\n<span class="material-symbols-outlined ' + v1 + 'pa pause">\npause_circle\n</span>\n<p class="' + v1 + ' sname">' + v6 + '</p>\n</div>\n<audio id=t' + v3 + ' class="audio-element" data-file-name="'+v7+'" >\n<source src="music/' + v7 + '.opus" type="audio/mpeg">\n</audio>');
+            console.log('<br>\n\n<div class="' + v4 + ' title">\n<span class="material-symbols-outlined ' + v1 + 'pl play">\nplay_circle\n</span>\n<span class="material-symbols-outlined ' + v1 + 'pa pause">\npause_circle\n</span>\n<p class="' + v1 + ' sname">' + v6 + '</p>\n</div>\n<audio id=t' + v3 + ' class="audio-element" data-file-name="' + v7 + '" >\n<source src="music/' + v7 + '.opus" type="audio/mpeg">\n</audio>');
+
+            vk = v1 + " song"
+            console.log(vk);
+            localStorage.setItem(vk, v3)
+
+            function keyandvaluesonglocals() {
+                const keyandvaluesong = {};
+                Object.keys(localStorage).forEach(key => {
+                    if (key.includes('song')) {
+                        keyandvaluesong[key] = localStorage.getItem(key);
+                    }
+                });
+                return keyandvaluesong;
+            }
+
+            const keyandvaluesong = keyandvaluesonglocals();
+            let sortsong = [];
+            for (var vehicle in keyandvaluesong) {
+                sortsong.push([vehicle, keyandvaluesong[vehicle]]);
+            }
+
+            sortsong.sort(function (a, b) {
+                return a[1] - b[1];
+            });
+            console.log(sortsong);
+
+
+
+            v3++;
+            localStorage.setItem('noofsongs', v3)
 
 
 
