--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
             <span class="material-symbols-outlined  pause">
                 <img src="Images/pause_circle.svg" class="pause-circle-img showerpa">
             </span>
-            <p class="sbg sname"><span id="songnamemain">Shower</span><br><span class="artist">Becky G</span></p>
+            <p class="sname"><span id="songnamemain">Shower</span><br><span class="artist">Becky G</span></p>
+            <audio id="t1" class="audio-element" data-file-artist="Becky G" data-file-name="Shower" song-id="shower">
+                <source src="shower.opus" type="audio/mpeg">
+            </audio>
         </div>
-        <audio id="t1" class="audio-element" data-file-artist="Becky G" data-file-name="Shower">
-            <source src="shower.opus" type="audio/mpeg">
-        </audio>
+
 
         <div class="confessions-part-2-usher title">
             <span class="material-symbols-outlined  play">
@@ -51,12 +52,14 @@
             <span class="material-symbols-outlined  pause">
                 <img src="Images/pause_circle.svg" class="pause-circle-img cptupa">
             </span>
-            <p class="cptu sname"><span id="songnamemain">Confessions part 2</span><br><span class="artist">Usher</span>
+            <p class="sname"><span id="songnamemain">Confessions part 2</span><br><span class="artist">Usher</span>
             </p>
+            <audio id="t2" class="audio-element" data-file-artist="Usher" data-file-name="Confessions Part 2"
+                song-id="cptu">
+                <source src="music/Confessions Part 2.opus" type="audio/mpeg">
+            </audio>
         </div>
-        <audio id="t2" class="audio-element" data-file-artist="Usher" data-file-name="Confessions Part 2">
-            <source src="music/Confessions Part 2.opus" type="audio/mpeg">
-        </audio>
+
 
 
         <div class="seasons-of-love-rent title">
@@ -66,11 +69,12 @@
             <span class="material-symbols-outlined pause">
                 <img src="Images/pause_circle.svg" class="pause-circle-img solrpa">
             </span>
-            <p class="solr sname"><span id="songnamemain">Seasons of Love</span><br><span class="artist">Rent</span></p>
+            <p class="sname"><span id="songnamemain">Seasons of Love</span><br><span class="artist">Rent</span></p>
+            <audio id="t3" class="audio-element" data-file-artist="Rent" data-file-name="Season of Love" song-id="solr">
+                <source src="music/Seasons of Love.opus" type="audio/mpeg">
+            </audio>
         </div>
-        <audio id="t3" class="audio-element" data-file-artist="Rent" data-file-name="Season of Love">
-            <source src="music/Seasons of Love.opus" type="audio/mpeg">
-        </audio>
+
 
 
         <div class="set-fire-to-the-rain-adele-royal-albert title">
@@ -80,12 +84,14 @@
             <span class="material-symbols-outlined pause">
                 <img src="Images/pause_circle.svg" class="pause-circle-img sfttrarlpa">
             </span>
-            <p class="sfttrarl sname"><span id="songnamemain">Set Fire to the rain(Royal Albert hall)</span><br><span
+            <p class="sname"><span id="songnamemain">Set Fire to the rain(Royal Albert hall)</span><br><span
                     class="artist">Adele</span></p>
+            <audio id="t4" class="audio-element" data-file-artist="Adele" data-file-name="Set Fire to the rain"
+                song-id="sfttrarl">
+                <source src="music/Set Fire To The Rain Live at The Royal Albert Hall.opus" type="audio/mpeg">
+            </audio>
         </div>
-        <audio id="t4" class="audio-element" data-file-artist="Adele" data-file-name="Set Fire to the rain">
-            <source src="music/Set Fire To The Rain Live at The Royal Albert Hall.opus" type="audio/mpeg">
-        </audio>
+
     </div>
     <script src="music.js" type="text/javascript"></script>
 </body>
