--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nova+Mono&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="Images/favicon.ico">
 </head>
 
 <body>
@@ -21,12 +21,19 @@
             <p id="minuter">0:</p>
             <p id="seconder">00</p>
         </div>
+        <img src="Images/prev.jpg" class="prevsong play-circle-img">
+        <img src="Images/mcplay.jpg" class="play-circle-img mcplay">
+        <img src="Images/mcpause.jpg" class="pause-circle-img mcpause">
+        <img src="Images/next.jpg" class="nextsong play-circle-img">
+        <br><br>
         <span class="material-symbols-outlined">
             <img src="Images/repeat off.svg" class="replaybutt">
         </span>
         <span class="material-symbols-outlined">
             <img src="Images/repeat on.svg" class="replaystopbutt">
         </span>
+        <img src="Images/shuffle.svg" class="shuffleoff shuffle play-circle-img">
+        <img src="Images/shuffle on.svg" class="shuffleon shuffle play-circle-img">
     </div>
 
     <div id="playbuts">
@@ -34,9 +41,6 @@
         <div class="showerbeckyg title">
             <span class="material-symbols-outlined play">
                 <img src="Images/play_circle.svg" class="play-circle-img showerpl">
-            </span>
-            <span class="material-symbols-outlined  pause">
-                <img src="Images/pause_circle.svg" class="pause-circle-img showerpa">
             </span>
             <p class="sname"><span id="songnamemain">Shower</span><br><span class="artist">Becky G</span></p>
             <audio id="t1" class="audio-element" data-file-artist="Becky G" data-file-name="Shower" song-id="shower">
@@ -48,9 +52,6 @@
         <div class="confessions-part-2-usher title">
             <span class="material-symbols-outlined  play">
                 <img src="Images/play_circle.svg" class="play-circle-img cptupl">
-            </span>
-            <span class="material-symbols-outlined  pause">
-                <img src="Images/pause_circle.svg" class="pause-circle-img cptupa">
             </span>
             <p class="sname"><span id="songnamemain">Confessions part 2</span><br><span class="artist">Usher</span>
             </p>
@@ -66,9 +67,6 @@
             <span class="material-symbols-outlined play">
                 <img src="Images/play_circle.svg" class="play-circle-img solrpl">
             </span>
-            <span class="material-symbols-outlined pause">
-                <img src="Images/pause_circle.svg" class="pause-circle-img solrpa">
-            </span>
             <p class="sname"><span id="songnamemain">Seasons of Love</span><br><span class="artist">Rent</span></p>
             <audio id="t3" class="audio-element" data-file-artist="Rent" data-file-name="Season of Love" song-id="solr">
                 <source src="music/Seasons of Love.opus" type="audio/mpeg">
@@ -80,9 +78,6 @@
         <div class="set-fire-to-the-rain-adele-royal-albert title">
             <span class="material-symbols-outlined  play">
                 <img src="Images/play_circle.svg" class="play-circle-img sfttrarlpl">
-            </span>
-            <span class="material-symbols-outlined pause">
-                <img src="Images/pause_circle.svg" class="pause-circle-img sfttrarlpa">
             </span>
             <p class="sname"><span id="songnamemain">Set Fire to the rain(Royal Albert hall)</span><br><span
                     class="artist">Adele</span></p>
