--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </span>
             <p class="sname"><span id="songnamemain">Shower</span><br><span class="artist">Becky G</span></p>
             <audio id="t1" class="audio-element" data-file-artist="Becky G" data-file-name="Shower" song-id="shower">
-                <source src="shower.opus" type="audio/mpeg">
+                <source src="Images/shower.mp3" type="audio/mpeg">
             </audio>
         </div>
 
