--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+
     <div id="musiccontrols">
         <div id="titletrack"></div>
         <div id="trackartist"></div>
@@ -30,7 +31,10 @@
             <img src="Images/repeat off.svg" class="replaybutt">
         </span>
         <span class="material-symbols-outlined">
-            <img src="Images/repeat on.svg" class="replaystopbutt">
+            <img src="Images/repeat on.svg" class="replayplaylistt">
+        </span>
+        <span class="material-symbols-outlined">
+            <img src="Images/repeat one.svg" class="replayonesong">
         </span>
         <img src="Images/shuffle.svg" class="shuffleoff shuffle play-circle-img">
         <img src="Images/shuffle on.svg" class="shuffleon shuffle play-circle-img">
@@ -42,6 +46,11 @@
             <span class="material-symbols-outlined play">
                 <img src="Images/play_circle.svg" class="play-circle-img showerpl">
             </span>
+            <div class="showerpa animationaud">
+                <span class="thebars bar0"></span>
+                <span class="thebars bar1"></span>
+                <span class="thebars bar2"></span>
+            </div>
             <p class="sname"><span id="songnamemain">Shower</span><br><span class="artist">Becky G</span></p>
             <audio id="t1" class="audio-element" data-file-artist="Becky G" data-file-name="Shower" song-id="shower">
                 <source src="Images/shower.mp3" type="audio/mpeg">
